Fixed image widths on small screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,6 +18,10 @@ p {
     text-align: justify;
 }
 
+img {
+    max-width: 100%;
+}
+
 #content {
     max-width: 632px;
     margin: auto;
